[gd_scene load_steps=14 format=3 uid="uid://t8souq7rp5b0"]

[ext_resource type="Texture2D" uid="uid://uyt2ory8d5tw" path="res://iceberg.png" id="1_i3pqv"]
[ext_resource type="Script" uid="uid://u1o4cucfsce4" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Script" uid="uid://caf26xtsl12se" path="res://FishingRod.gd" id="2_1jxqw"]
[ext_resource type="Texture2D" uid="uid://c67q1hv7elfr0" path="res://player.png" id="3_hqtel"]
[ext_resource type="Texture2D" uid="uid://4x4sffp2yjn2" path="res://fishing-rod.png" id="4_hqtel"]
[ext_resource type="AudioStream" uid="uid://bkfq4tbsuhxx6" path="res://cast-rod.ogg" id="5_sweqy"]
[ext_resource type="Texture2D" uid="uid://cmnllokiygu1u" path="res://goldfish.png" id="6_2hs0m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(50, 72)

[sub_resource type="FontVariation" id="FontVariation_sweqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3pqv"]
size = Vector2(898, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sweqy"]
size = Vector2(164, 434.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hs0m"]
size = Vector2(78.5, 493.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jxqw"]
size = Vector2(566.75, 403)

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_i3pqv")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3_hqtel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_hqtel")

[node name="Label" type="Label" parent="Player"]
visible = false
offset_left = -60.0
offset_top = -80.0
offset_right = 75.0
offset_bottom = -52.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_sweqy")
theme_override_font_sizes/font_size = 20
text = "Press E to fish"

[node name="FishingRod" type="Node2D" parent="."]
script = ExtResource("2_1jxqw")
player_path = NodePath("../Player")

[node name="Rod" type="Sprite2D" parent="FishingRod"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_hqtel")

[node name="FishingSound" type="AudioStreamPlayer2D" parent="FishingRod"]
stream = ExtResource("5_sweqy")

[node name="FishingLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="FishSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_2hs0m")

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(1, -258)
shape = SubResource("RectangleShape2D_i3pqv")
debug_color = Color(0.83386874, 0.32519782, 0.56177956, 0.41960785)

[node name="Wall2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(20, 273)
shape = SubResource("RectangleShape2D_i3pqv")
debug_color = Color(0.7788229, 0.38453886, 0.5590459, 0.41960785)

[node name="Wall3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall3"]
position = Vector2(362, 38.875)
shape = SubResource("RectangleShape2D_sweqy")
debug_color = Color(0.8092656, 0.35328978, 0.56258136, 0.41960785)

[node name="Wall4" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall4"]
position = Vector2(-323.25, 35.4375)
shape = SubResource("RectangleShape2D_2hs0m")
debug_color = Color(0.81685615, 0.35205394, 0.53481096, 0.41960785)

[node name="LandArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandArea"]
position = Vector2(-0.375, 40)
shape = SubResource("RectangleShape2D_1jxqw")

[connection signal="body_entered" from="LandArea" to="Player" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="LandArea" to="Player" method="_on_area_2d_body_exited"]
